--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ body {
     width: 110px;
     float: right;
   }
+  .divssss {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   * {
     margin: 5px;
     padding: 5px;
